CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(PCIeApp C)
SET(CMAKE_C_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 14)
SET(PROJECT_BINARY_DIR bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(./src SRC)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.c ${SRC})